--- a/CSS/style.css
+++ b/CSS/style.css
@@ -70,5 +70,22 @@ ol .rojo {
 /* tarjeta blanca con imagen */
 .card {
     background-color: white;
-    width: 150px;
+    /* width: 150px; */
+}
+
+.card .container {
+    padding: 16px;
+    margin: 0 0 16px 0;
+}
+
+.card h4, .card p {
+    padding:0%;
+    margin:0%;
+}
+
+.cardrow {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
 }
