--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,6 @@ h1, h2, h3 {
 
 /* Margin left top right down */
 
-
 hr {
     background-color: blue;
     width: 100px;
@@ -12,7 +11,6 @@ hr {
     border-style: dotted none none;
     border-width: 4px;
 }
-
 
 li{
     color: burlywood;
@@ -88,4 +86,16 @@ ol .rojo {
     flex-direction: row;
     width: 100%;
     justify-content: space-between;
+}
+
+header {
+    align-items: center;
+    background-color: white;
+    width: 100%;
+    height: 56px;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 16px 0 16px;
+    position: fixed;
+    box-sizing: border-box;
 }
