--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,101 +1,20 @@
-h1, h2, h3 {
-    color: seagreen;
-}
-
-/* Margin left top right down */
-
-hr {
-    background-color: blue;
-    width: 100px;
-    height: 0%;
-    border-style: dotted none none;
-    border-width: 4px;
-}
-
-li{
-    color: burlywood;
-}
-button {
-    cursor: pointer;
-    padding: 8px;
-    border: none;
-    border-radius: 24px;
-}
-
-button:hover, img:active {
-    box-shadow: -webkit-box-shadow: 0px 9px 24px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 9px 24px 0px rgba(0,0,0,0.75);
-    box-shadow: 0px 9px 24px 0px #faa545;
-    -webkit-transform: rotate(360deg);
-    transition: 1s;
-}
-
-.rojo {
-    color: coral;
-}
-
-ol .rojo {
-    color: limegreen;
-}
-
-#bizcocho {
-    background-color: hotpink;
-}
-
-.primary {
-    background-color: darkred;
-    color: darkkhaki;
-}
-
-
-.primary:hover {
-    background-color: tomato;
-}
-
-.secondary:hover {
-    background-color: yellow;
-}
-
-
-.gradient-bg {
-    background: linear-gradient(90deg, #db3747 0%, #d62d61 25%, #81005e 50%, #5c457e 75%, #1c537f 100%); 
-}
-
-.card .container span {
-    color: red;
-}
-
-/* tarjeta blanca con imagen */
-.card {
-    background-color: white;
-    /* width: 150px; */
-}
-
-.card .container {
-    padding: 16px;
-    margin: 0 0 16px 0;
-}
-
-.card h4, .card p {
-    padding:0%;
-    margin:0%;
-}
-
-.cardrow {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    justify-content: space-between;
-}
-
-header {
-    align-items: center;
-    background-color: white;
-    width: 100%;
-    height: 56px;
-    display: flex;
-    justify-content: space-between;
-    padding: 0 16px 0 16px;
+.fab {
     position: fixed;
-    box-sizing: border-box;
+    right: 16px;
+    bottom: 16px;
 }
+
+    .fab a {
+    color: white;
+    text-decoration: none
+    }
+
+    @media screen and (min-width: 600px) {
+        .fab {
+            position: fixed;
+            right: 16px;
+            bottom: 16px;
+            background-color: violet;
+        }
+        
+    }
